html'den hidden sınıfı kaldırılarak css ve js'den ilgili yerler silindi.sayfa yüklendiğinde görev ekleme alanı görünür hale getirildi.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
      
        <div class="add-task">
           <i class="fa-solid fa-pencil"></i>
-          <div id="input" class="hidden">
+          <div id="input">
           <input type="text" id="newTaskInput" placeholder="Yeni Görevini Ekle">
           <button id="addtaskbtn">+</button>
           </div>
   
        </div>
-
         <div class="filters">
             <button class="filter-btn" id="allbtn">Hepsi</button>
              <button class="filter-btn" id="completebtn">Tamamlananlar</button>
