tüm değişiklikler eklendi

--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
     <title>Task To Do</title>
-</head>
-<body>
-       <div class="container">
-       <h1>TO DO LİST</h1>
-     
-       <div class="add-task">
-          <i class="fa-solid fa-pencil"></i>
-          <div id="input">
-          <input type="text" id="newTaskInput" placeholder="Yeni Görevini Ekle">
+  </head>
+  <body>
+    <div class="container">
+      <h1>TO DO LİST</h1>
+
+      <div class="add-task">
+        <i class="fa-solid fa-pencil"></i>
+        <div id="input">
+          <input
+            type="text"
+            id="newTaskInput"
+            placeholder="Yeni Görevini Ekle"
+          />
           <button id="addtaskbtn">+</button>
-          </div>
-  
-       </div>
-        <div class="filters">
-            <button class="filter-btn" id="allbtn">Hepsi</button>
-             <button class="filter-btn" id="completebtn">Tamamlananlar</button>
-              <button class="filter-btn" id="incompletebtn">Tamamlanmayanlar</button>
         </div>
+      </div>
+      <div class="filters">
+        <button class="filter-btn" id="allbtn">Hepsi</button>
+        <button class="filter-btn" id="completebtn">Tamamlananlar</button>
+        <button class="filter-btn" id="incompletebtn">Tamamlanmayanlar</button>
+      </div>
 
-       <div id="tasklist"></div>
+      <div id="tasklist"></div>
+    </div>
 
-       </div>
-    
-
- <script src="assets/script.js"></script>
-</body>
+    <script src="assets/script.js"></script>
+  </body>
 </html>
