detay butonu ve görevlerin önceki halini gösterme özelliği eklendi.

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
         <button class="filter-btn" id="allbtn">Hepsi</button>
         <button class="filter-btn" id="completebtn">Tamamlananlar</button>
         <button class="filter-btn" id="incompletebtn">Tamamlanmayanlar</button>
+
       </div>
 
-      <div id="tasklist"></div>
+      <div id="tasklist">
+        <button id="detail-btn" class="filter-btn">Detayları Göster</button>
+      </div>
     </div>
 
     <script src="assets/script.js"></script>
